- Stopped using MessageBox calls to signal errors from within DmlFile. - Added SimulationStack class to lhsmod to allow concurrent access to shared pool of simulation files. - Removed unused SensitivityAnalysisSimulation class. - Moved to using SimulationStack within SensitivityAnalysisParser instead of List<String^>. - Renamed SensitiviyAnalysisParser::_numberOfRuns to SensitiviyAnalysisParser::_numberOfSimulations. - Removed SensitiviyAnalysisParser::_numberOfCompletedRuns. - Removed LhsForm::_simulationFilesByThread and LhsForm::__simulationFilesByThread and added LhsForm::_simulationStack. - BackgroundWorkers for simulations now use a stack to pull simulation filenames.

--- a/trunk/gui/lhsmod/lhsmod.vcproj
+++ b/trunk/gui/lhsmod/lhsmod.vcproj
@@ -266,6 +266,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\SimulationStack.h"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.h"
 				>
 			</File>
