--- a/trunk/simulation/dsport/dsport.vcproj
+++ b/trunk/simulation/dsport/dsport.vcproj
@@ -158,11 +158,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\PdsRng.cpp"
+				RelativePath=".\Humans.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Population.cpp"
+				RelativePath=".\PdsRng.cpp"
 				>
 			</File>
 			<File
@@ -196,7 +196,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\DensimClasses.h"
+				RelativePath=".\Classes.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Constants.h"
 				>
 			</File>
 			<File
@@ -204,15 +208,11 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Humans.h"
+				>
+			</File>
+			<File
 				RelativePath=".\PdsRng.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Population.h"
-				>
-			</File>
-			<File
-				RelativePath=".\SimConstants.h"
 				>
 			</File>
 			<File
