- Reordered member declaration of double blood meal parameters for clarity, as well as use in gui. - Added Mosquitoes.h and Mosquitoes.cpp to encapsulate adult female cohorts in densim code. - Converted densim simulation to use double precision instead of single/float precision. - Began work on NewMosquitoLifeCycle which will use new cohort classes, tracking age and weight. - Parceled out NewMosquitoLifeCycle code into separate methods, AdvanceSusceptibleNulliparous and Advance SusceptibleParous, to reduce method size. - Added member for minimum oviposition temperature from Biology. - Removed used of PreOviAdultCohort and OviAdultCohortCollection from cimsim, using new AdultCohort class from Mosquitoes.h. - Created various collections for new mosquito cohorts. - Added temporary verification methods that output cohorts. - Fixed bug where dsport::DBloodUProp, which is expected to be the proportion at the low weight, or the "upper proportion" (misnomer), was being loaded with the HighWeightRatio instead of LowWeightRatio, from Biology. - Removed extraneous check for DBloodUWt - DBloodLWt == 0 in MosquitoLifeCycle(). - Began work on infection of mosquitoes using new cohorts. - Added helper methods for new cohorts, to sum, calculate average weight, find biting counts, etc.

--- a/trunk/simulation/dsport/dsport.vcproj
+++ b/trunk/simulation/dsport/dsport.vcproj
@@ -162,6 +162,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Mosquitoes.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\PdsRng.cpp"
 				>
 			</File>
@@ -209,6 +213,10 @@
 			</File>
 			<File
 				RelativePath=".\Humans.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Mosquitoes.h"
 				>
 			</File>
 			<File
