--- a/trunk/simulation/densim/densim.vcproj
+++ b/trunk/simulation/densim/densim.vcproj
@@ -154,11 +154,11 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\dsport.cpp"
+				RelativePath=".\Humans.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Humans.cpp"
+				RelativePath=".\Location.cpp"
 				>
 			</File>
 			<File
@@ -208,11 +208,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\dsport.h"
+				RelativePath=".\Humans.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Humans.h"
+				RelativePath=".\Location.h"
 				>
 			</File>
 			<File
