--- a/trunk/lhs/densim/lhs.densim.vcproj
+++ b/trunk/lhs/densim/lhs.densim.vcproj
@@ -2,8 +2,8 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="denmod.ui.lhsmod"
-	ProjectGUID="{397D8A84-12D0-4BB5-B0C5-F6DDC633B545}"
+	Name="denmod.lhs.densim"
+	ProjectGUID="{D166FEC3-5B68-4A93-8240-A8069CE6F7CA}"
 	RootNamespace="lhsmod"
 	Keyword="ManagedCProj"
 	>
@@ -135,7 +135,6 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="$(NoInherit)"
-				OutputFile="$(OutDir)\dmlhs.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
